search func WIP

--- a/views/interface.hbs
+++ b/views/interface.hbs
@@ -130,6 +130,41 @@
 </div>
 
 <button id="search">SEARCH</button><br><br>
+<div id="search-content" style="display: none;">
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+    <input type="checkbox" id="apptid-search-check" name="aptid-search-check" value="apptid">
+    <label for="apptid-search-check">Apptid</label><br>
+</div>
+
 <button id="report">REPORT</button><br><br>
 <button id="import-csv">IMPORT APPOINTMENTS CSV TO CENTRAL NODE</button><br><br><br>
 <!--MAKE MORE IMPORTS FOR EACH NODE-->
