other node compatibilty

--- a/views/interface.hbs
+++ b/views/interface.hbs
@@ -163,6 +163,8 @@
 
 <button id="report">REPORT</button><br><br>
 <button id="import-csv">IMPORT APPOINTMENTS CSV TO CENTRAL NODE</button><br><br><br>
+<button id="import-csv-luzon">IMPORT APPOINTMENTS CSV TO LUZON NODE</button><br><br><br>
+<button id="import-csv-vismin">IMPORT APPOINTMENTS CSV TO CENTRAL NODE</button><br><br><br>
 <!--MAKE MORE IMPORTS FOR EACH NODE-->
 <div id="loading-csv"></div><br><br><br><br><br><br>
 
