updating functions for db servers, added temp local import

--- a/views/interface.hbs
+++ b/views/interface.hbs
@@ -162,10 +162,10 @@
 </div>
 
 <button id="report">REPORT</button><br><br>
-<button id="import-csv">IMPORT APPOINTMENTS CSV TO CENTRAL NODE</button><br><br><br>
-<button id="import-csv-luzon">IMPORT APPOINTMENTS CSV TO LUZON NODE</button><br><br><br>
-<button id="import-csv-vismin">IMPORT APPOINTMENTS CSV TO CENTRAL NODE</button><br><br><br>
-<!--MAKE MORE IMPORTS FOR EACH NODE-->
+<button id="import-csv-local">IMPORT APPOINTMENTS CSV TO LOCAL NODE</button><br><br> <!--TEMPORARY, DELETE WHEN DEPLOYING-->
+<button id="import-csv">IMPORT APPOINTMENTS CSV TO CENTRAL NODE</button><br><br>
+<button id="import-csv-luzon">IMPORT APPOINTMENTS CSV TO LUZON NODE</button><br><br>
+<button id="import-csv-vismin">IMPORT APPOINTMENTS CSV TO VISMIN NODE</button><br><br><br>
 <div id="loading-csv"></div><br><br><br><br><br><br>
 
 <h1>Table Data (WIP)</h1>
