added basic report functions

--- a/views/interface.hbs
+++ b/views/interface.hbs
@@ -192,6 +192,12 @@
 </div>
 
 <button id="report">REPORT</button><br><br>
+<div id="report-content" style="display: none;">
+    <button id="count-by-location">Count Appointments by Location</button><br><br>
+    <button id="count-by-mainspecialty">Count Appointments by Main Specialty</button><br><br>
+</div>
+<div id="report-results"></div><br><br>
+
 <button id="import-csv-local">IMPORT APPOINTMENTS CSV TO LOCAL NODE</button><br><br> <!--TEMPORARY, DELETE WHEN DEPLOYING-->
 <button id="import-csv">IMPORT APPOINTMENTS CSV TO CENTRAL NODE</button><br><br>
 <button id="import-csv-luzon">IMPORT APPOINTMENTS CSV TO LUZON NODE</button><br><br>
