refactored for vismin site

--- a/views/interface.hbs
+++ b/views/interface.hbs
@@ -200,12 +200,11 @@
 
 <button id="sync-data-central">SYNC DATA TO CENTRAL NODE</button><br><br>
 <div id="sync-data-central-queue"></div>
-<button id="sync-data-luzon-vismin">SYNC DATA TO LUZON AND VISMIN NODE</button><br><br>
+<button id="sync-data-luzon-vismin">SYNC DATA TO VISMIN NODE</button><br><br>
 <div id="sync-data-central-queue"></div>
 
 <!--<button id="import-csv-local">IMPORT APPOINTMENTS CSV TO LOCAL NODE</button><br><br>TEMPORARY, DELETE WHEN DEPLOYING-->
 <button id="import-csv">IMPORT APPOINTMENTS CSV TO CENTRAL NODE</button><br><br>
-<button id="import-csv-luzon">IMPORT APPOINTMENTS CSV TO LUZON NODE</button><br><br>
 <button id="import-csv-vismin">IMPORT APPOINTMENTS CSV TO VISMIN NODE</button><br><br><br>
 <div id="loading-csv"></div><br><br><br><br><br><br>
 
@@ -214,8 +213,6 @@
 <div id="queue-status">
     Central Node Insert Queue: {{centralNodeQueueInsert}} <br><br>
     Central Node Update Queue: {{centralNodeQueueUpdate}} <br><br>
-    Luzon Node Insert Queue: {{luzonNodeQueueInsert}} <br><br>
-    Luzon Node Update Queue: {{luzonNodeQueueUpdate}} <br><br>
     VisMin Node Insert Queue: {{visMinNodeQueueInsert}} <br><br>
     VisMin Node Update Queue: {{visMinNodeQueueUpdate}} <br><br>
 </div><br><br>
