--- a/views/interface.hbs
+++ b/views/interface.hbs
@@ -220,12 +220,8 @@
     VisMin Node Update Queue: {{visMinNodeQueueUpdate}} <br><br>
 </div><br><br>
 
-<h1>Table Data (WIP)</h1>
-<a id="show-10" href="/display/10">SHOW 10 </a>
-<a id="show-25" href="/display/25">SHOW 25 </a>
-<a id="show-50" href="/display/50">SHOW 50 </a>
-<a id="show-100" href="/display/100">SHOW 100 </a>
-<a id="show-all" href="/display/all">SHOW ALL </a><br><br>
+<h1>Table Data</h1>
+
 <table id="table-data">
     <thead>
         <tr>
